--- a/src/app/(authorized)/layout.module.css
+++ b/src/app/(authorized)/layout.module.css
@@ -1,7 +1,7 @@
 .layout {
 	display: grid;
 	gap: 10px;
-	grid-template: auto auto 1fr / auto 1fr;
+	grid-template: auto auto 1fr / 360px 1fr;
 	padding: 20px;
 }
 
