--- a/src/shared/ui/logo-dash/logo-dash.module.css
+++ b/src/shared/ui/logo-dash/logo-dash.module.css
@@ -1,26 +1,34 @@
-.link {
+.wrapper {
 	display: flex;
 	gap: 8px;
 	align-items: center;
 	text-decoration: none;
+	user-select: none;
+	pointer-events: none;
 }
 
-.img {
-	transition: 0.2s ease-in-out;
-	transition-delay: 0.05s;
-}
-
-.link:hover > .img {
-	transform: rotate(-90deg);
+.logo {
+	width: auto;
+	height: auto;
 }
 
 .title {
-	transition: 0.2s ease-in-out;
-	transition-delay: 0.05s;
 	color: var(--color-primary);
 	font-size: 26px;
 }
 
-.link:hover > .title {
-	transform: translateX(4px);
+.xs_title {
+	font-size: 16px;
+}
+
+.xs_logo {
+	width: 18px;
+}
+
+.xl_title {
+	font-size: 60px;
+}
+
+.xl_logo {
+	width: 60px;
 }
