--- a/src/widgets/header/ui/nav/nav.module.css
+++ b/src/widgets/header/ui/nav/nav.module.css
@@ -1,3 +1,10 @@
+.nav {
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	transform: translate(50%, -50%);
+}
+
 .list {
 	display: flex;
 	align-items: center;
@@ -13,4 +20,17 @@
 
 .list__link:hover {
 	color: var(--color-primary);
+}
+
+@media (max-width: 1024px) {
+	.nav {
+		top: 100%;
+		transform: translate(0, 0);
+		right: 0;
+	}
+
+	.list {
+		flex-direction: column;
+		align-items: start;
+	}
 }
